--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+*.html
+
+### gradle
 .gradle
 build/
 !gradle/wrapper/gradle-wrapper.jar
@@ -8,6 +11,7 @@ build/
 .idea/modules.xml
 .idea/jarRepositories.xml
 .idea/compiler.xml
+.idea/workspace.xml
 .idea/libraries/
 *.iws
 *.iml
