fixes, proxy support

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,13 @@
 kotlin.code.style=official
+
+# common
+# https://docs.gradle.org/current/userguide/build_environment.html
+
+org.gradle.cacheing=true
+org.gradle.parallel=true
+org.gradle.vfs.watch=true
+org.gradle.warning.mode=all
+
+org.gradle.jvmargs=-Xmx1g
+
+systemProp.file.encoding=utf-8
