--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ build/
 .idea/jarRepositories.xml
 .idea/compiler.xml
 .idea/workspace.xml
+.idea/hotswap_agent.xml
 .idea/libraries/
 *.iws
 *.iml
