--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ build/
 .idea/compiler.xml
 .idea/workspace.xml
 .idea/hotswap_agent.xml
+.idea/gradle.xml
+.idea/misc.xml
 .idea/libraries/
 *.iws
 *.iml
