library versions update

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,10 @@
 kotlin.code.style=official
+kotlinVersion=1.9.0
+jsoupVersion=1.16.1
+jsr305Version=3.0.2
+log4jVersion=2.20.0
+log4jApiKotlinVersion=1.2.0
+kotlinxCoroutines=1.7.2
 
 # common
 # https://docs.gradle.org/current/userguide/build_environment.html
