--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,9 @@
 kotlin.code.style=official
+kotlin.jvm.target.validation.mode=ERROR
+
+jdkVersion=17
+pgconvModuleName=org.github.aanno.pgconv
+
 kotlinVersion=1.9.0
 jsoupVersion=1.16.1
 jsr305Version=3.0.2
@@ -9,7 +14,7 @@ kotlinxCoroutines=1.7.2
 # common
 # https://docs.gradle.org/current/userguide/build_environment.html
 
-org.gradle.cacheing=true
+org.gradle.cacheing=false
 org.gradle.parallel=true
 org.gradle.vfs.watch=true
 org.gradle.warning.mode=all
