--- a/gradle.properties
+++ b/gradle.properties
@@ -10,6 +10,7 @@ readability4jVersion=1.0.8
 jsr305Version=3.0.2
 log4jVersion=2.20.0
 log4jApiKotlinVersion=1.2.0
+guavaVersion=32.1.1-jre
 kotlinxCoroutines=1.7.2
 
 # common
