--- a/gradle.properties
+++ b/gradle.properties
@@ -12,6 +12,7 @@ log4jVersion=2.20.0
 log4jApiKotlinVersion=1.2.0
 guavaVersion=32.1.1-jre
 kotlinxCoroutines=1.7.2
+epub4jVersion=4.2.1
 
 # common
 # https://docs.gradle.org/current/userguide/build_environment.html
