first feature-complete working version

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,6 +13,7 @@ log4jApiKotlinVersion=1.2.0
 guavaVersion=32.1.1-jre
 kotlinxCoroutines=1.7.2
 epub4jVersion=4.2.1
+cliktVersion=4.2.0
 
 # common
 # https://docs.gradle.org/current/userguide/build_environment.html
