switch to (coroutine) channels, completed cli interface and epub generation

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,24 @@
 kotlin.code.style=official
+kotlin.jvm.target.validation.mode=ERROR
+
+jdkVersion=17
+pgconvModuleName=org.github.aanno.pgconv
+
+kotlinVersion=1.9.0
+jsoupVersion=1.16.1
+readability4jVersion=1.0.8
+jsr305Version=3.0.2
+log4jVersion=2.20.0
+log4jApiKotlinVersion=1.2.0
+guavaVersion=32.1.1-jre
+kotlinxCoroutines=1.7.2
+epub4jVersion=4.2.1
+cliktVersion=4.2.0
 
 # common
 # https://docs.gradle.org/current/userguide/build_environment.html
 
-org.gradle.cacheing=true
+org.gradle.cacheing=false
 org.gradle.parallel=true
 org.gradle.vfs.watch=true
 org.gradle.warning.mode=all
