update library versions

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,20 +1,24 @@
 kotlin.code.style=official
 kotlin.jvm.target.validation.mode=ERROR
 
+# see gradle compatibility:
+# https://docs.gradle.org/current/userguide/compatibility.html
+# see kotlin compatibility:
+# https://stackoverflow.com/questions/63989767/which-versions-of-kotlin-are-compatible-with-which-versions-of-java
 jdkVersion=17
 pgconvModuleName=org.github.aanno.pgconv
 
-kotlinVersion=1.9.0
-jsoupVersion=1.16.1
+kotlinVersion=1.9.25
+jsoupVersion=1.18.1
 readability4jVersion=1.0.8
 jsr305Version=3.0.2
-log4jVersion=2.20.0
-log4jApiKotlinVersion=1.2.0
-guavaVersion=32.1.1-jre
-kotlinxCoroutines=1.7.2
+log4jVersion=2.23.1
+log4jApiKotlinVersion=1.4.0
+guavaVersion=33.2.1-jre
+kotlinxCoroutines=1.8.1
 epub4jVersion=4.2.1
 epubcheckVersion=5.1.0
-cliktVersion=4.2.0
+cliktVersion=4.4.0
 
 # common
 # https://docs.gradle.org/current/userguide/build_environment.html
