log4j-api-kotlin is already jpms compatible

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,7 @@ jsoupVersion=1.18.1
 readability4jVersion=1.0.8
 jsr305Version=3.0.2
 log4jVersion=2.23.1
-log4jApiKotlinVersion=1.5.0-SNAPSHOT
+log4jApiKotlinVersion=1.4.0
 guavaVersion=33.2.1-jre
 kotlinxCoroutines=1.8.1
 epub4jVersion=4.2.1
