--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /*log
 /*_ebookmaker
 libs/log4j-api-kotlin-1.5.0-SNAPSHOT.jar
+/check.xml
 
 ### gradle
 .gradle
@@ -20,6 +21,8 @@ build/
 .idea/hotswap_agent.xml
 .idea/gradle.xml
 .idea/misc.xml
+.idea/aws.xml
+.idea/sbt.xml
 .idea/libraries/
 *.iws
 *.iml
